; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/pmu/extr_base.c_nvkm_pmu_fini.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/pmu/extr_base.c_nvkm_pmu_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_subdev = type { i32 }
%struct.nvkm_pmu = type { %struct.TYPE_4__, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 (%struct.nvkm_pmu*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvkm_subdev*, i32)* @nvkm_pmu_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvkm_pmu_fini(%struct.nvkm_subdev* %0, i32 %1) #0 {
  %3 = alloca %struct.nvkm_subdev*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.nvkm_pmu*, align 8
  store %struct.nvkm_subdev* %0, %struct.nvkm_subdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.nvkm_subdev*, %struct.nvkm_subdev** %3, align 8
  %7 = call %struct.nvkm_pmu* @nvkm_pmu(%struct.nvkm_subdev* %6)
  store %struct.nvkm_pmu* %7, %struct.nvkm_pmu** %5, align 8
  %8 = load %struct.nvkm_pmu*, %struct.nvkm_pmu** %5, align 8
  %9 = getelementptr inbounds %struct.nvkm_pmu, %struct.nvkm_pmu* %8, i32 0, i32 1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32 (%struct.nvkm_pmu*)*, i32 (%struct.nvkm_pmu*)** %11, align 8
  %13 = icmp ne i32 (%struct.nvkm_pmu*)* %12, null
  br i1 %13, label %14, label %22

14:                                               ; preds = %2
  %15 = load %struct.nvkm_pmu*, %struct.nvkm_pmu** %5, align 8
  %16 = getelementptr inbounds %struct.nvkm_pmu, %struct.nvkm_pmu* %15, i32 0, i32 1
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32 (%struct.nvkm_pmu*)*, i32 (%struct.nvkm_pmu*)** %18, align 8
  %20 = load %struct.nvkm_pmu*, %struct.nvkm_pmu** %5, align 8
  %21 = call i32 %19(%struct.nvkm_pmu* %20)
  br label %22

22:                                               ; preds = %14, %2
  %23 = load %struct.nvkm_pmu*, %struct.nvkm_pmu** %5, align 8
  %24 = getelementptr inbounds %struct.nvkm_pmu, %struct.nvkm_pmu* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = call i32 @flush_work(i32* %25)
  ret i32 0
}

declare dso_local %struct.nvkm_pmu* @nvkm_pmu(%struct.nvkm_subdev*) #1

declare dso_local i32 @flush_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
